fdo#35668: do not manually free parser context

* reenable complex.unoxml.DOMTest testXDocumentBuilder()
* do not manually free parser context, there is a shared_ptr for that